deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: avernusx/otus:0.2.1
        name: my-app
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
