service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  ports:
  - nodePort: 30500
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-app
  type: NodePort
